Update reflection lists (#177)
Co-authored-by: jose.pereda <jose.pereda@gluonhq.com>

--- a/App/pom.xml
+++ b/App/pom.xml
@@ -108,6 +108,7 @@
                         <list>controlsfx</list>
                     </bundlesList>
                     <resourcesList>
+                        <item>about.properties</item>
                         <item>logging.properties</item>
                         <item>whisper.store</item>
                     </resourcesList>
