remove -f and use default pom.xml

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -16,4 +16,4 @@ jobs:
         distribution: 'temurin'
 
     - name: Verify with Maven
-      run: mvn -B verify -f pom.xml
+      run: mvn -B verify
