--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,17 @@
             <version>5.8.2</version>
             <scope>test</scope>
         </dependency>
+        <!-- Move to demo module -->
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-lineawesome-pack</artifactId>
+            <version>12.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
+            <version>12.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
