Add logging to commandManager

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -5,3 +5,4 @@ java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 com.gluonhq.richtext.viewmodel.level = INFO
+com.gluonhq.richtext.undo.level = INFO
