--- a/EmojiPopOver/src/main/resources/com/gluonhq/emoji/popup/emoji-popover.properties
+++ b/EmojiPopOver/src/main/resources/com/gluonhq/emoji/popup/emoji-popover.properties
@@ -1,5 +1,6 @@
 # Default Name of Tabs
-TAB.NAME.PEOPLE=Smileys & People
+TAB.NAME.SMILEY=Smileys & Emotion
+TAB.NAME.PEOPLE=People & Body
 TAB.NAME.NATURE=Animals & Nature
 TAB.NAME.FOOD_DRINK=Food & Drink
 TAB.NAME.ACTIVITIES=Activities
