update logging properties

--- a/src/main/resources/logging.properties
+++ b/src/main/resources/logging.properties
@@ -4,5 +4,6 @@ handlers = java.util.logging.ConsoleHandler
 java.util.logging.ConsoleHandler.level = FINEST
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
-com.gluonhq.richtextarea.viewmodel.level = INFO
+com.gluonhq.richtextarea.model.level = INFO
 com.gluonhq.richtextarea.undo.level = INFO
+com.gluonhq.richtextarea.viewmodel.level = INFO
