--- a/App/pom.xml
+++ b/App/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.gluonhq.chatapp</groupId>
         <artifactId>chatapp</artifactId>
-        <version>1.1.6</version>
+        <version>1.1.7-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -246,7 +246,7 @@
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.json</artifactId>
-            <version>1.1.5</version>
+            <version>1.1.6</version>
             <scope>runtime</scope>
             <classifier>module</classifier>
         </dependency>
@@ -301,18 +301,18 @@
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>ChatListView</artifactId>
-            <version>1.1.6</version>
+            <version>1.1.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiData</artifactId>
-            <version>1.1.6</version>
+            <version>1.1.7-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiTextArea</artifactId>
-            <version>1.1.6</version>
+            <version>1.1.7-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <!--<dependency>
@@ -337,12 +337,12 @@
                 <dependency>
                     <groupId>com.gluonhq.chatapp</groupId>
                     <artifactId>orientation</artifactId>
-                    <version>1.1.6</version>
+                    <version>1.1.7-SNAPSHOT</version>
                 </dependency>
                 <dependency>
                     <groupId>com.gluonhq.chatapp</groupId>
                     <artifactId>position</artifactId>
-                    <version>1.1.6</version>
+                    <version>1.1.7-SNAPSHOT</version>
                 </dependency>
 
                 <!-- Attach for javafx:run -->
