--- a/EmojiTextArea/pom.xml
+++ b/EmojiTextArea/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.gluonhq.chatapp</groupId>
         <artifactId>chatapp</artifactId>
-        <version>1.1.6</version>
+        <version>1.1.7-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -92,12 +92,12 @@
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiData</artifactId>
-            <version>1.1.6</version>
+            <version>1.1.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiPopOver</artifactId>
-            <version>1.1.6</version>
+            <version>1.1.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
@@ -124,12 +124,12 @@
         <dependency>
             <groupId>jakarta.json</groupId>
             <artifactId>jakarta.json-api</artifactId>
-            <version>1.1.5</version>
+            <version>1.1.6</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.json</artifactId>
-            <version>1.1.5</version>
+            <version>1.1.6</version>
             <classifier>module</classifier>
         </dependency>
     </dependencies>
