--- a/EmojiTextArea/pom.xml
+++ b/EmojiTextArea/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.gluonhq.chatapp</groupId>
         <artifactId>chatapp</artifactId>
-        <version>1.1.7</version>
+        <version>1.1.8-SNAPSHOT</version>
     </parent>
 
     <properties>
@@ -92,12 +92,12 @@
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiData</artifactId>
-            <version>1.1.7</version>
+            <version>1.1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiPopOver</artifactId>
-            <version>1.1.7</version>
+            <version>1.1.8-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
