--- a/services/position/pom.xml
+++ b/services/position/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.gluonhq.chatapp</groupId>
         <artifactId>chatapp</artifactId>
-        <version>1.1.7</version>
+        <version>1.1.8-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
