--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,6 +88,7 @@ jobs:
 
 
   linux-native:
+    if: ${{ false }}
     runs-on: ubuntu-18.04
     needs: find-version
     steps:
@@ -171,6 +172,7 @@ jobs:
 
 
   macos-native:
+    if: ${{ false }}
     runs-on: macos-latest
     needs: find-version
     steps:
