--- a/services/orientation/pom.xml
+++ b/services/orientation/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.gluonhq.chatapp</groupId>
         <artifactId>chatapp</artifactId>
-        <version>1.1.10-SNAPSHOT</version>
+        <version>1.1.10</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
