--- a/rta/pom.xml
+++ b/rta/pom.xml
@@ -10,7 +10,7 @@
     <parent>
         <groupId>com.gluonhq</groupId>
         <artifactId>rich-text-area-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1-SNAPSHOT</version>
     </parent>
 
     <name>Rich Text Area control</name>
